ui: highlight usage color by percentage

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -129,7 +129,7 @@
      <rect>
       <x>610</x>
       <y>160</y>
-      <width>60</width>
+      <width>80</width>
       <height>16</height>
      </rect>
     </property>
@@ -137,7 +137,7 @@
      <string/>
     </property>
    </widget>
-   <widget class="QLabel" name="label">
+   <widget class="QLabel" name="labelTextOf">
     <property name="geometry">
      <rect>
       <x>565</x>
