chore: add label with About info which contains link to README.md

--- a/tweaker-release/style.css
+++ b/tweaker-release/style.css
@@ -12,7 +12,7 @@ QWidget {
 
 QLabel {
     font-size: 15px;
-    color: #2e2e2e;
+    color: #0ce2ed;
     background: transparent;
     border: none;
 }
